welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:16: error: not found: value avanve
    avanve();
    ^